# Synote

./: README.md
backend/: Dockerfile  go.mod
backend/cmd/server/: main.go
backend/internal/auth/: auth.go
backend/internal/db/: db.go
backend/internal/handlers/: ai.go  auth.go  me.go  middleware.go  response.go  sync.go
backend/migrations/: 001_init.sql
desktop/: CMakeLists.txt  resources.qrc
desktop/src/: AppWindow.cpp  AppWindow.h  main.cpp
desktop/src/ai/: AIClient.cpp  AIClient.h
desktop/src/db/: Database.cpp  Database.h  schema.sql
desktop/src/settings/: Keychain.cpp  Keychain.h  LoginDialog.cpp  LoginDialog.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h
desktop/src/sync/: SyncClient.cpp  SyncClient.h
desktop/src/ui/: FlowLayout.cpp  FlowLayout.h  TagChip.cpp  TagChip.h
desktop/styles/: app.qss
